# messengerbot-api

./: .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
api/: __init__.py  socials.py
api/models/: socials.py
