[tool.poetry]
name = "messengerbot-api"
version = "0.1.0"
description = ""
authors = ["naijun0403 <naijun0403@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^1.10.13"
sanic = "^24.6.0"
sanic-ext = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
